<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActividadRegistro1"
    android:background="@drawable/fondologin2">

    <TextView
        android:id="@+id/tv1"
        style="@style/f_gc_s"
        android:layout_width="343dp"
        android:layout_height="89dp"
        android:text="@string/str8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526" />

    <TextView
        android:id="@+id/tv2"
        style="@style/f_n_l_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.409" />

    <Button
        android:id="@+id/btnAnndirRutina"
        android:layout_width="356dp"
        android:layout_height="42dp"
        android:background="@drawable/round_btn_naranja"
        android:onClick="continuar"
        android:text="@string/str5"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921" />

</androidx.constraintlayout.widget.ConstraintLayout>