<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActividadRegistrarse2"
    android:background="@drawable/fondologin2">

    <EditText
        android:id="@+id/editUser"
        android:layout_width="257dp"
        android:layout_height="34dp"
        android:background="@drawable/round_edittext"
        android:ems="10"
        android:hint="@string/str96"
        android:includeFontPadding="true"
        android:paddingLeft="10dp"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textColor="#808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328" />

    <EditText
        android:id="@+id/editPass2"
        android:layout_width="257dp"
        android:layout_height="34dp"
        android:background="@drawable/round_edittext"
        android:ems="10"
        android:hint="@string/str97"
        android:includeFontPadding="true"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textAlignment="textStart"
        android:textColor="#808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631" />

    <EditText
        android:id="@+id/editPass"
        android:layout_width="257dp"
        android:layout_height="34dp"
        android:background="@drawable/round_edittext"
        android:ems="10"
        android:hint="@string/str97"
        android:includeFontPadding="true"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textAlignment="textStart"
        android:textColor="#808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.474" />

    <TextView
        android:id="@+id/tvPeso"
        style="@style/f_gc_s_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278" />

    <TextView
        android:id="@+id/textView5"
        style="@style/f_n_m_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:text="@string/str9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <TextView
        android:id="@+id/tvAltura"
        style="@style/f_gc_s_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contraseña:"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423" />

    <TextView
        android:id="@+id/tvPass2"
        style="@style/f_gc_s_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576" />

    <Button
        android:id="@+id/btnAnndirRutina"
        android:layout_width="356dp"
        android:layout_height="42dp"
        android:background="@drawable/round_btn_naranja"
        android:onClick="continuar"
        android:text="@string/str13"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="367dp"
        android:layout_height="11dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/barraprogresion0" />

</androidx.constraintlayout.widget.ConstraintLayout>