<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentoRegistro4"
    android:background="@drawable/fondologin2">

    <EditText
        android:id="@+id/editPeso"
        android:layout_width="257dp"
        android:layout_height="34dp"
        android:background="@drawable/round_edittext"
        android:ems="10"
        android:hint="@string/str20"
        android:includeFontPadding="true"
        android:paddingLeft="10dp"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textColor="#808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328" />

    <EditText
        android:id="@+id/editAltura"
        android:layout_width="257dp"
        android:layout_height="34dp"
        android:background="@drawable/round_edittext"
        android:ems="10"
        android:hint="@string/str21"
        android:includeFontPadding="true"
        android:paddingLeft="10dp"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textColor="#808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/tvPeso"
        style="@style/f_gc_s_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278" />

    <TextView
        android:id="@+id/kg"
        style="@style/f_gc_s_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331" />

    <TextView
        android:id="@+id/cm"
        style="@style/f_gc_s_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479" />

    <TextView
        android:id="@+id/textView5"
        style="@style/f_n_m_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:text="@string/str9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <TextView
        android:id="@+id/tvAltura"
        style="@style/f_gc_s_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str21"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422" />

    <Button
        android:id="@+id/btnAnndirRutina"
        android:layout_width="356dp"
        android:layout_height="42dp"
        android:background="@drawable/round_btn_naranja"
        android:onClick="finalizar"
        android:text="@string/str22"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="367dp"
        android:layout_height="11dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/barraprogresion2" />

</androidx.constraintlayout.widget.ConstraintLayout>